--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Trystan Williams's Cybersecurity Portfolio
-description: print("These projects will be useless without documentation.")
+title: Cybersecuritty Lab
+description: Build a home lab with me
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
