--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cybersecuritty Lab
+title: Cybersecurity Lab
 description: Build a home lab with me
 show_downloads: false
 google_analytics:
